<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StudentAttendanceActivity" >

    <LinearLayout
        android:id="@+id/main_student_attendance_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/student_name_student_attendance_header"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/header_border"
            android:text="@string/student_name_header"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/student_id_student_attendance_header"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/header_border"
            android:text="@string/student_id_header"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/state_student_attendance_header"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/header_border"
            android:text="@string/state_header"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/main_student_attendance_header"
        android:layout_marginTop="5dp"
        android:baselineAligned="false" >

        <ListView
            android:id="@+id/attendance_LV"
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

        </ListView>

    </LinearLayout>
    
    <Button
        android:id="@+id/back_student_attendance_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="100dp"
        android:text="@string/back_button_text" />

    <Button
        android:id="@+id/done_student_attendance_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_below="@id/back_student_attendance_button"
        android:text="@string/done_button_text" />

    <Button
        android:id="@+id/daily_report_student_attendance_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/done_student_attendance_button"
        android:text="@string/daily_report_button_text" />

    <Button
        android:id="@+id/final_report_student_attendance_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/daily_report_student_attendance_button"
        android:text="@string/final_report_button_text" />

</RelativeLayout>