<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StudentParticipationActivity" >

    <RelativeLayout
        android:id="@+id/part2_student_participation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/student_participation_header_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/student_name_student_participation_header"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/header_border"
                android:text="@string/student_name_header"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/student_id_student_participation_header"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/header_border"
                android:text="@string/student_id_header"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/student_rank_student_participation_header"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/header_border"
                android:text="@string/rank_header"
                android:textSize="25sp" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/student_participation_header_linearLayout" >

            <ListView
                android:id="@+id/studentParticipationListView"
                android:layout_width="800dp"
                android:layout_height="wrap_content" >
            </ListView>
            
        </LinearLayout>

        
        <Button
            android:id="@+id/back_student_participation_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="24dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/back_button_text" />

        <Button
            android:id="@+id/done_student_participation_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/back_student_participation_button"
            android:layout_marginTop="20dp"
            android:text="@string/done_button_text" />

        <Button
            android:id="@+id/daily_report_student_participation_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/done_student_participation_button"
            android:text="@string/daily_report_button_text" />

        <Button
            android:id="@+id/final_report_student_participation_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/daily_report_student_participation_button"
            android:text="@string/final_report_button_text" />

        <Button
            android:id="@+id/random_student_participation_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/final_report_student_participation_button"
            android:text="@string/random_student_button_text" />

        <Button
            android:id="@+id/student_attendance_student_participation_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/random_student_participation_button"
            android:layout_marginTop="50dp"
            android:text="@string/student_attendance_button_text" />
    </RelativeLayout>

</RelativeLayout>