<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignupActivity" >

    <EditText
        android:id="@+id/prof_id_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/course_id_textView"
        android:layout_marginLeft="39dp"
        android:layout_toRightOf="@+id/course_id_textView"
        android:ems="10"
        android:inputType="number"
        android:textSize="20sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="22dp"
        android:layout_toLeftOf="@+id/prof_id_editText"
        android:text="@string/email_textview"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="21dp"
        android:layout_toLeftOf="@+id/prof_id_editText"
        android:text="@string/password_view"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="21dp"
        android:layout_toLeftOf="@+id/prof_id_editText"
        android:text="@string/department_textview"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/course_id_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="212dp"
        android:text="@string/prof_id"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/prof_id_editText"
        android:text="@string/rewrite_password_textview"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/prof_name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prof_id_editText"
        android:layout_alignTop="@+id/textView2"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/prof_password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/prof_name_editText"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/prof_rewrite_password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/prof_password_editText"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/prof_email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/prof_rewrite_password_editText"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/course_id_textView"
        android:layout_marginTop="21dp"
        android:layout_toLeftOf="@+id/prof_id_editText"
        android:text="@string/prof_name"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/department_spinner"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prof_email_editText"
        android:layout_alignRight="@+id/prof_email_editText"
        android:layout_alignTop="@+id/textView6"
        android:entries="@array/department_arrays"
        android:prompt="@string/department_prompt"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/ok_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/department_spinner"
        android:layout_below="@+id/department_spinner"
        android:layout_marginTop="24dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/ok_button_text" />

    <Button
        android:id="@+id/back_signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ok_signup_button"
        android:layout_alignBottom="@+id/ok_signup_button"
        android:layout_alignRight="@+id/department_spinner"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/back_button_text" />

</RelativeLayout>